2000-11-08  Richard Braakman  <dark@wapit.com>

	* Making release 0.12.2.

2000-11-07  Tuomas Luttinen  <tuo@wapit.com>

        * gwlib/octstr.c: Added some protection against endless loops in 
        strip-functions for special cases.

        * gw/wml_compiler.c: Memory leak with malformed variable fixed. 
        Also fixed the bug that reserved words cannot be variable names,
        eg $(password).

2000-11-06  Tuomas Luttinen  <tuo@wapit.com>

        * gw/wml_compiler.c: Variables with syntax errors are now discarded 
        with warning instead giving up with the whole WML source. Some memory 
        leak still exists. Also an unknown tag produces a warning in the log.

2000-11-03  Tuomas Luttinen  <tuo@wapit.com>

	* gw/wml_compiler.c: A conformance patch: card and template elements
	cannot have 2 or more do elements of the same name, PI are ignored,
	unknown tags and CDATA are now processed. Also some code was cleaned
	into the new coding standard.

2000-11-03  Richard Braakman  <dark@wapit.com>

	* gw/wsp_headers.c: If an Expires header has an invalid date, then
	encode it as a date far in the past.  We can't just skip the header
	because RFC2068 says such a response should be treated as already
	expired, and we have to tell the client to do that.

	* gw/wsp_headers.c: Make sure that a Multi-octet-integer is always
	at least one octet long, even if its value is 0.

2000-11-01  Kalle Marjola  <rpr@wapit.com>

	* gwlib/conffile.c (config_sanity_check): fixed that 'otaconfig'
	is accepted, too, thanks to Philip Psiloinis for pointing this out

	* gw/bb_smsc.c: make sure that lists are emptied

2000-11-01  Yann Muller  <ymuller@3glab.com>

	* gw/smsc_at.c: handles message lengths of 8*n+1 properly.
	Added comments to encode7bituncompressed().

2000-10-30  Richard Braakman  <dark@wapit.com>

	* gw/wap-appl.c: Support for X-WAP.TOD header, needed for WAP 1.1
	conformance.  (requirement UACache-0010)
