@@ -1,5 +1,17 @@
 2000-11-08  Richard Braakman  <dark@wapit.com>
 
+	* gw/wap-appl.c: Deal with client_SDU_size being 0, which means
+	there is no limit.  Thanks to Ruud Schramp for pointing this out.
+	Also made connectionless mode set it to 0 instead of an arbitrary
+	value.
+
+2000-11-08  Kalle Marjola  <rpr@wapit.com>
+
+	* gw/bb_boxc.c: fixed error that caused bearerbox to possibly
+	segfault when connection from illegal IP was tried.
+
+2000-11-08  Richard Braakman  <dark@wapit.com>
+
 	* Making release 0.12.2.
 
 2000-11-07  Tuomas Luttinen  <tuo@wapit.com>
